# ErrorOnCircle

./: CMakeLists.txt  README.md
.github/workflows/: install.yml  macos.yml  standalone.yml  style.yml  windows.yml
documentation/: CMakeLists.txt
include/circlerr/: circlerr.h
source/: circlerr.cc
standalone/: CMakeLists.txt
standalone/source/: main.cc
test/: CMakeLists.txt  circleparams.json
test/source/: circlerr.cc
